Add: -> Section for Posts in Home

--- a/publicacoes/templates/home.html
+++ b/publicacoes/templates/home.html
@@ -83,6 +83,27 @@
             </div>
         </div>
     </section>
+    <section id="publicacoes" class="my-2">
+        <div class="container galeria-bg">
+            <h3 class="fs-2 font-titulo">Publicações <i class="bi bi-postcard"></i></h3>
+            <div class="d-flex flex-wrap">
+                {% for post in publicacoes %}
+                    <div class="card mx-2" style="width: 18rem;">
+                        {% if post.img_capa %}
+                            <img src="{{post.img_capa}}" class="card-img-top" alt="...">
+                        {% else %}
+                            <img src="/static/imagens/logo-art.jpg" class="card-img-top" alt="...">
+                        {% endif %}
+                        <div class="card-body" style="height: max-content !important;">
+                            <h5 class="card-title text-success">{{post.titulo}}</h5>
+                            <p class="card-text h-50" style="overflow: hidden;">{{post.resumo}}</p>
+                            <a href="#" class="w-100 btn btn-success">Vê mais</a>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
 {% endblock %}
 
 {% block page_script %}
